# judge-prototype

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs
static/: test.html
submissions/: 0000000000.json  0000000001.json  0000000002.json  0000000002.txt  0000000003.json  0000000004.json  0000000004.txt
templates/: error.html.tera  index.html.tera  submissions.html.tera  view.html.tera
