[package]
name = "judge2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
rocket = "0.5.0-rc.2"
serde_json = "1.0.91"
time = "0.3.17"
serde = "1.0.152"
chrono = "0.4.23"
comrak = "0.15.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars", "tera"]
